--- a/styles/components/_userSellIndex-setting.scss
+++ b/styles/components/_userSellIndex-setting.scss
@@ -13,9 +13,6 @@
         background-color: green;
     }
     @include lg {
-        background-color: yellow;
-    }
-    @include xl {
         background-color: #d3d3d3;
     }
 
@@ -29,14 +26,25 @@
         .switch{ 
             display: flex;
             position: relative;
-            left: 10%;
             top:5%;
             background-color: $decorate-color;
             border-radius: 50px;
             justify-content: center;
             align-items: center;
-            width: 23%;
+            width: 240px;
             height: 8%;
+            @include sm {
+                left: 5%;
+            }
+            @include md {
+                left: 3%;
+            }
+            @include lg {
+                left: 6.5%;
+            }
+            @include xl {
+                left: 10%;
+            }
 
             .innerbutton{
                 font-weight: bold;
@@ -46,16 +54,25 @@
                 font-size: 1rem;
                 height: 50%;
                 width: 50%;
+                margin-right: 10px;
             }
-        
-            .buttontext{
+            
+            .buttonwhite{
                 background-color: white;
-                font-weight: bold;
                 border-radius: 50px;
-                font-size: 1rem;
                 padding: 3%;
                 margin-left: 7.5%;
+                height: 70%;
+                width: 150px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                .buttontext{
+                    font-weight: bold;
+                    font-size: 1rem;
+                }
             }
+            
         }
     
         .logo{
