feature : user/hotel/info page finish

--- a/styles/layout/home.module.scss
+++ b/styles/layout/home.module.scss
@@ -38,6 +38,7 @@
 @import '../components/userMulti-menu';
 @import '../components/userPersonalInfo-section';
 @import '../components/userHotelDetail-section';
+@import '../components/userHotel-info';
 @import '../components/userSellIndex-setting';
 @import '../components/userSellIndex-table';
 @import '../components/userSellOrder-setting';
