--- a/styles/components/_userHotel-notice.scss
+++ b/styles/components/_userHotel-notice.scss
@@ -1,4 +1,4 @@
-.userHotelInfoContainer {
+.userHotelNoticeContainer {
     position: absolute;
     top: 15%;
     right: 0%;
@@ -7,8 +7,8 @@
     display: flex;
     .main{
         position: absolute;
-        width:80%;
-        height: 100%;
+        height:100%;
+        width:85%;
         right: 0%;
         padding: 2.5%;
         .content{
@@ -63,6 +63,34 @@
             }
             
         }
+        .check_content{
+            margin-bottom: 2%;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            .contentname{
+                font-size: 1.5rem;
+                font-weight: bold;
+            }
+            .btn{
+                height: 20px;
+                width:20px;
+                margin-left:2%;
+                margin-right: 2%;
+                border-radius: 5px;
+                cursor: pointer;
+                background-color: white;
+                &:hover{
+                    filter: brightness(0.7);
+                    transition: linear 0.1s;
+                }
+                
+            }
+            .selection{
+                    font-size: 1.2rem;
+                    font-weight: bold;
+            }
+        }
         .btn_content{
             height: 10%;
             width:100%;
@@ -72,7 +100,8 @@
             .btn{
                 margin-right: 1%;
                 margin-left: 1%;
-                height: 40%;
+                margin-bottom: 1%;
+                height: 50%;
                 width: 5%;
                 border-radius: 5px;
                 background-color: white;
@@ -86,6 +115,3 @@
         }
     }
 }
-
-
-
