--- a/styles/layout/home.module.scss
+++ b/styles/layout/home.module.scss
@@ -39,6 +39,7 @@
 @import '../components/userPersonalInfo-section';
 @import '../components/userHotelDetail-section';
 @import '../components/userHotel-info';
+@import '../components/userHotel-notice';
 @import '../components/userSellIndex-setting';
 @import '../components/userSellIndex-table';
 @import '../components/userSellOrder-setting';
