--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -603,7 +603,7 @@
 .hotelInfoRoomContainer {
   display: flex;
   flex-direction: row;
-  width: 100%;
+  width: 80%;
 }
 .hotelInfoRoomContainer * {
   font-size: 1rem;
@@ -1397,6 +1397,7 @@
 }
 
 .userMultiMenuContainer {
+  position: fixed;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1410,12 +1411,7 @@
 }
 @media (min-width: 480px) {
   .userMultiMenuContainer {
-    width: 150px;
-  }
-}
-@media (min-width: 720px) {
-  .userMultiMenuContainer {
-    width: 240px;
+    width: 20%;
   }
 }
 .userMultiMenuContainer .title {
@@ -1712,31 +1708,20 @@
 .userSellIndex_SettingContainer {
   position: absolute;
   top: 15%;
+  right: 0%;
   width: 100%;
   height: 85%;
   display: flex;
 }
-@media (min-width: 480px) {
-  .userSellIndex_SettingContainer {
-    background-color: red;
-  }
-}
-@media (min-width: 720px) {
-  .userSellIndex_SettingContainer {
-    background-color: green;
-  }
-}
-@media (min-width: 960px) {
-  .userSellIndex_SettingContainer {
-    background-color: #d3d3d3;
-  }
-}
 .userSellIndex_SettingContainer .container {
-  width: 70%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: absolute;
+  width: 80%;
+  height: 100%;
+  right: 0%;
+  padding: 2.5%;
 }
 .userSellIndex_SettingContainer .container .switch {
   display: flex;
@@ -1748,26 +1733,6 @@
   align-items: center;
   width: 240px;
   height: 8%;
-}
-@media (min-width: 480px) {
-  .userSellIndex_SettingContainer .container .switch {
-    left: 5%;
-  }
-}
-@media (min-width: 720px) {
-  .userSellIndex_SettingContainer .container .switch {
-    left: 3%;
-  }
-}
-@media (min-width: 960px) {
-  .userSellIndex_SettingContainer .container .switch {
-    left: 6.5%;
-  }
-}
-@media (min-width: 1200px) {
-  .userSellIndex_SettingContainer .container .switch {
-    left: 10%;
-  }
 }
 .userSellIndex_SettingContainer .container .switch .innerbutton {
   font-weight: bold;
@@ -1809,19 +1774,16 @@
 }
 @media (min-width: 720px) {
   .userSellIndex_SettingContainer .container .filterblock {
-    left: 3%;
     font-size: 0.6rem;
   }
 }
 @media (min-width: 960px) {
   .userSellIndex_SettingContainer .container .filterblock {
-    left: 6.5%;
     font-size: 0.8rem;
   }
 }
 @media (min-width: 1200px) {
   .userSellIndex_SettingContainer .container .filterblock {
-    left: 10%;
     font-size: 1rem;
   }
 }
@@ -1833,25 +1795,22 @@
 }
 @media (min-width: 480px) {
   .userSellIndex_SettingContainer .container .filterblock .filterp {
-    visibility: hidden;
+    width: 12.5%;
   }
 }
 @media (min-width: 720px) {
   .userSellIndex_SettingContainer .container .filterblock .filterp {
     width: 10%;
-    visibility: visible;
   }
 }
 @media (min-width: 960px) {
   .userSellIndex_SettingContainer .container .filterblock .filterp {
     width: 7.5%;
-    visibility: visible;
   }
 }
 @media (min-width: 1200px) {
   .userSellIndex_SettingContainer .container .filterblock .filterp {
     width: 5%;
-    visibility: visible;
   }
 }
 .userSellIndex_SettingContainer .container .filterblock .filterp2 {
@@ -1863,25 +1822,22 @@
 }
 @media (min-width: 480px) {
   .userSellIndex_SettingContainer .container .filterblock .filterp2 {
-    visibility: hidden;
+    width: 12.5%;
   }
 }
 @media (min-width: 720px) {
   .userSellIndex_SettingContainer .container .filterblock .filterp2 {
     width: 10%;
-    visibility: visible;
   }
 }
 @media (min-width: 960px) {
   .userSellIndex_SettingContainer .container .filterblock .filterp2 {
     width: 7.5%;
-    visibility: visible;
   }
 }
 @media (min-width: 1200px) {
   .userSellIndex_SettingContainer .container .filterblock .filterp2 {
     width: 5%;
-    visibility: visible;
   }
 }
 .userSellIndex_SettingContainer .container .filterblock .selectform {
@@ -1906,26 +1862,6 @@
   padding: 2.25rem;
   border-radius: 20px;
   border: 1px solid aliceblue;
-}
-@media (min-width: 480px) {
-  .userSellIndex_SettingContainer .container .salesfiguresblock {
-    left: 6%;
-  }
-}
-@media (min-width: 720px) {
-  .userSellIndex_SettingContainer .container .salesfiguresblock {
-    left: 3%;
-  }
-}
-@media (min-width: 960px) {
-  .userSellIndex_SettingContainer .container .salesfiguresblock {
-    left: 6.5%;
-  }
-}
-@media (min-width: 1200px) {
-  .userSellIndex_SettingContainer .container .salesfiguresblock {
-    left: 10%;
-  }
 }
 .userSellIndex_SettingContainer .container .salesfiguresblock .title {
   font-weight: bold;
