--- a/styles/components/_userSellIndex-setting.scss
+++ b/styles/components/_userSellIndex-setting.scss
@@ -1,27 +1,31 @@
 .userSellIndex_SettingContainer{
     position: absolute;
     top: 15%;
+    right: 0%;
     width: 100%;
     height: 85%;
     display: flex;
 
-    //test
-    @include sm {
-        background-color: red;
-    }
-    @include md {
-        background-color: green;
-    }
-    @include lg {
-        background-color: #d3d3d3;
-    }
+    // //test
+    // @include sm {
+    //     background-color: red;
+    // }
+    // @include md {
+    //     background-color: green;
+    // }
+    // @include lg {
+    //     background-color: #d3d3d3;
+    // }
 
     .container{
-        width:70%;
-        height: 100%;
         display:flex;
         flex-direction: column;
         align-items: center;
+        position: absolute;
+        width:80%;
+        height: 100%;
+        right: 0%;
+        padding: 2.5%;
 
         .switch{ 
             display: flex;
@@ -33,18 +37,6 @@
             align-items: center;
             width: 240px;
             height: 8%;
-            @include sm {
-                left: 5%;
-            }
-            @include md {
-                left: 3%;
-            }
-            @include lg {
-                left: 6.5%;
-            }
-            @include xl {
-                left: 10%;
-            }
 
             .innerbutton{
                 font-weight: bold;
@@ -86,19 +78,15 @@
             display: flex;
             position: relative;
             top:7.5%;
-            
             justify-content: center;
             align-items: center;
             @include md {
-                left: 3%;
                 font-size: 0.6rem;
             }
             @include lg {
-                left: 6.5%;
                 font-size: 0.8rem;
             }
             @include xl {
-                left: 10%;
                 font-size: 1rem;
             }
 
@@ -108,19 +96,16 @@
                 font-weight: bold;
                 margin-top: 0.5%;
                 @include sm {
-                    visibility: hidden;
+                    width: 12.5%;
                 }
                 @include md {          
                     width: 10%;
-                    visibility: visible;
                 }
                 @include lg {          
                     width: 7.5%;
-                    visibility: visible;
                 }
                 @include xl {          
                     width: 5%;
-                    visibility: visible;
                 }
             }
 
@@ -131,19 +116,16 @@
                 margin-top: 0.5%;
                 margin-left: 5%;
                 @include sm {
-                    visibility: hidden;
+                    width: 12.5%;
                 }
                 @include md {
                     width: 10%;    
-                    visibility: visible;
                 }
                 @include lg {          
                     width: 7.5%;
-                    visibility: visible;
                 }
                 @include xl {          
                     width: 5%;
-                    visibility: visible;
                 }
                 
             }
@@ -174,18 +156,6 @@
             padding: $base-padding * 3;
             border-radius: $base-border-radius;
             border: 1px solid $secondary-color;
-            @include sm {
-                left: 6%;
-            }
-            @include md {
-                left: 3%;
-            }
-            @include lg {
-                left: 6.5%;
-            }
-            @include xl {
-                left: 10%;
-            }
     
             .title{
                 font-weight: bold;
