--- a/styles/components/_hotelInfo-room.scss
+++ b/styles/components/_hotelInfo-room.scss
@@ -72,6 +72,18 @@
         border-radius: $base-border-radius;
         height: 200px;
         width: 12%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        .btn{
+            height: 50px;
+            width:50px;  
+        }
+        .content{
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
     }
 
     // @include sm{
