--- a/styles/components/_userSellIndex-setting.scss
+++ b/styles/components/_userSellIndex-setting.scss
@@ -100,12 +100,15 @@
                 }
                 @include md {          
                     width: 10%;
+                    margin-bottom: 1px;
                 }
                 @include lg {          
                     width: 7.5%;
+                    margin-bottom: 3px;
                 }
                 @include xl {          
                     width: 5%;
+                    margin-bottom: 5px;
                 }
             }
 
@@ -120,12 +123,15 @@
                 }
                 @include md {
                     width: 10%;    
+                    margin-bottom: 1px;
                 }
                 @include lg {          
                     width: 7.5%;
+                    margin-bottom: 3px;
                 }
                 @include xl {          
                     width: 5%;
+                    margin-bottom: 5px;
                 }
                 
             }
