--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -664,6 +664,18 @@
   border-radius: 20px;
   height: 200px;
   width: 12%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.hotelInfoRoomContainer .button_container .btn {
+  height: 50px;
+  width: 50px;
+}
+.hotelInfoRoomContainer .button_container .content {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .hotelInfoAttraction .attraction {
@@ -1801,16 +1813,19 @@
 @media (min-width: 720px) {
   .userSellIndex_SettingContainer .container .filterblock .filterp {
     width: 10%;
+    margin-bottom: 1px;
   }
 }
 @media (min-width: 960px) {
   .userSellIndex_SettingContainer .container .filterblock .filterp {
     width: 7.5%;
+    margin-bottom: 3px;
   }
 }
 @media (min-width: 1200px) {
   .userSellIndex_SettingContainer .container .filterblock .filterp {
     width: 5%;
+    margin-bottom: 5px;
   }
 }
 .userSellIndex_SettingContainer .container .filterblock .filterp2 {
@@ -1828,16 +1843,19 @@
 @media (min-width: 720px) {
   .userSellIndex_SettingContainer .container .filterblock .filterp2 {
     width: 10%;
+    margin-bottom: 1px;
   }
 }
 @media (min-width: 960px) {
   .userSellIndex_SettingContainer .container .filterblock .filterp2 {
     width: 7.5%;
+    margin-bottom: 3px;
   }
 }
 @media (min-width: 1200px) {
   .userSellIndex_SettingContainer .container .filterblock .filterp2 {
     width: 5%;
+    margin-bottom: 5px;
   }
 }
 .userSellIndex_SettingContainer .container .filterblock .selectform {
