--- a/styles/components/_hotelInfo-room.scss
+++ b/styles/components/_hotelInfo-room.scss
@@ -2,9 +2,8 @@
 .hotelInfoRoomContainer{
     display: flex;
     flex-direction: row; 
-    width: 80%;
+    width: 100%;
 
-    
     * {
         font-size: $base-font-size;
     }
@@ -17,7 +16,6 @@
         }
     }
     .searchcontainer{
-        
         background:white;
         height: 200px;
         width: 88%;
@@ -76,13 +74,17 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        font-size: 1.5rem;
+        font-weight: bold;
+
         .btn{
             height: 50px;
-            width:50px;  
+            width: 50px;  
+            border-radius: 0.5rem;
         }
         .content{
-            margin-top: 10px;
-            margin-bottom: 10px;
+            margin-top: 15px;
+            margin-bottom: 15px;
         }
     }
 
