feature :hotelinfo intro

--- a/styles/layout/home.module.scss
+++ b/styles/layout/home.module.scss
@@ -21,6 +21,7 @@
 @import '../components/userIndex-section';
 
 @import '../components/hotelInfo-room';
+@import '../components/hotelInfo-intro';
 @import '../components/hotelInfo-attraction';
 @import '../components/hotelInfo-evaluate';
 @import '../components/hotelInfo-information';
