--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -681,6 +681,37 @@
   margin-bottom: 15px;
 }
 
+.hotelInfoIntroduction {
+  padding: 1.5%;
+}
+.hotelInfoIntroduction .title {
+  font-size: 2rem;
+  font-weight: bold;
+}
+.hotelInfoIntroduction .content {
+  margin-top: 10px;
+}
+.hotelInfoIntroduction .s_title {
+  font-size: 1.5rem;
+  margin-top: 1%;
+  margin-bottom: 1%;
+  font-weight: bold;
+}
+.hotelInfoIntroduction .block {
+  display: flex;
+  margin-top: 1%;
+  margin-bottom: 1%;
+}
+.hotelInfoIntroduction .block p {
+  margin-right: 2%;
+  background-color: white;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  border-radius: 10px;
+}
+
 .hotelInfoAttraction .attraction {
   display: grid;
   width: 100%;
