user/sell/index_figureSize

--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -1807,9 +1807,11 @@
   display: flex;
 }
 .userHotelInfoContainer .main {
-  padding: 2.5%;
+  position: absolute;
+  width: 80%;
   height: 100%;
-  width: 100%;
+  right: 0%;
+  padding: 2.5%;
 }
 .userHotelInfoContainer .main .content {
   margin-bottom: 2%;
@@ -2133,93 +2135,6 @@
   height: 10%;
 }
 
-.userHotelInfoContainer {
-  position: absolute;
-  top: 15%;
-  right: 0%;
-  width: 100%;
-  height: 85%;
-  display: flex;
-}
-.userHotelInfoContainer .main {
-  position: absolute;
-  width: 80%;
-  height: 100%;
-  right: 0%;
-  padding: 2.5%;
-}
-.userHotelInfoContainer .main .content {
-  margin-bottom: 2%;
-  width: 100%;
-  display: flex;
-}
-.userHotelInfoContainer .main .content .title {
-  font-size: 2.5rem;
-  margin-bottom: 1%;
-}
-.userHotelInfoContainer .main .content .contentname {
-  margin-right: 2%;
-  font-size: 1.5rem;
-  font-weight: bold;
-}
-.userHotelInfoContainer .main .content .short_input {
-  border-radius: 7px;
-  width: 30%;
-}
-.userHotelInfoContainer .main .content .long_input {
-  border-radius: 7px;
-  width: 40%;
-}
-.userHotelInfoContainer .main .pic_content {
-  margin-bottom: 2%;
-  height: 55%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-.userHotelInfoContainer .main .pic_content .contentname {
-  font-size: 1.5rem;
-  font-weight: bold;
-}
-.userHotelInfoContainer .main .pic_content .image {
-  margin-top: 2%;
-  margin-bottom: 1%;
-  height: 100%;
-  width: 100%;
-  background-color: white;
-  border-radius: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.userHotelInfoContainer .main .pic_content .image i {
-  font-size: 1.5rem;
-}
-.userHotelInfoContainer .main .pic_content .image i:hover {
-  font-size: 2rem;
-  transition: linear 0.1s;
-}
-.userHotelInfoContainer .main .btn_content {
-  height: 10%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: end;
-}
-.userHotelInfoContainer .main .btn_content .btn {
-  margin-right: 1%;
-  margin-left: 1%;
-  height: 40%;
-  width: 5%;
-  border-radius: 5px;
-  background-color: white;
-}
-.userHotelInfoContainer .main .btn_content .btn:hover {
-  background-color: black;
-  color: white;
-  transition: linear 0.2s;
-}
-
 .userHotelNoticeContainer {
   position: absolute;
   top: 15%;
@@ -2493,6 +2408,7 @@
   position: relative;
   top: 10%;
   width: 100%;
+  max-width: 1000px;
   height: 67.5%;
   background-color: white;
   padding: 2.25rem;
