--- a/styles/components/_userSellIndex-setting.scss
+++ b/styles/components/_userSellIndex-setting.scss
@@ -151,12 +151,12 @@
             }
         }
     
-//下方響應式已完成
         .salesfiguresblock {
             display: flex;
             position: relative;
             top:10%;
             width: 100%;
+            max-width: 1000px;
             height: 67.5%;
             background-color: white;
             padding: $base-padding * 3;
