--- a/styles/components/_userHotelRoom-section.scss
+++ b/styles/components/_userHotelRoom-section.scss
@@ -7,9 +7,11 @@
     display: flex;
 
     .leftContainer {
+        position: absolute;
         height: 100%;
-        width: 100%;
+        width: 85%;
         padding: 2.5%;
+        right: 0;
         padding-top: 1%;
         padding-bottom: 1%;
         display: flex;
