--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -926,93 +926,35 @@
 .infoTitleContainer {
   display: flex;
   height: 100%;
+  width: 100%;
   justify-content: space-between;
   margin-bottom: 5%;
+  flex-direction: column;
+  align-items: start;
+  padding: 1.5%;
 }
 .infoTitleContainer .title {
   font-size: 3rem;
 }
-.infoTitleContainer .titleLeftContainer {
-  position: relative;
-  top: 0%;
-  height: 100%;
-  background-color: dimgrey;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-@media (min-width: 480px) {
-  .infoTitleContainer .titleLeftContainer {
-    width: 25%;
-  }
-}
-@media (min-width: 720px) {
-  .infoTitleContainer .titleLeftContainer {
-    width: 23%;
-  }
-}
-@media (min-width: 960px) {
-  .infoTitleContainer .titleLeftContainer {
-    width: 23%;
-  }
-}
-@media (min-width: 1200px) {
-  .infoTitleContainer .titleLeftContainer {
-    width: 18%;
-  }
-}
-@media (min-width: 480px) {
-  .infoTitleContainer .titleLeftContainer .searchSearchformContainer, .infoTitleContainer .titleLeftContainer .btnfilter {
-    width: 80%;
-  }
-}
-@media (min-width: 960px) {
-  .infoTitleContainer .titleLeftContainer .searchSearchformContainer, .infoTitleContainer .titleLeftContainer .btnfilter {
-    width: 70%;
-  }
-}
-@media (min-width: 1200px) {
-  .infoTitleContainer .titleLeftContainer .searchSearchformContainer, .infoTitleContainer .titleLeftContainer .btnfilter {
-    width: 65%;
-  }
-}
-.infoTitleContainer .titleLeftContainer .btnfilter {
-  border-radius: 5px;
-  cursor: pointer;
-  height: 2.4rem;
-  padding: 10px;
-  margin: 0.75rem;
-  margin-top: 20%;
-  font-weight: bolder;
-  font-size: 1rem;
-}
-.infoTitleContainer .titleLeftContainer .logo {
-  margin: auto;
-  margin-top: 5rem;
-  margin-bottom: 2rem;
-  height: 100px;
-  width: 100px;
-}
-.infoTitleContainer .titleRightContainer {
-  width: 80%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-}
-.infoTitleContainer .titleRightContainer .titleRightTopContainer {
-  width: 80%;
+.infoTitleContainer .titleRightTopContainer {
+  width: 100%;
   height: 30%;
   display: flex;
   flex-direction: column;
   align-items: start;
   margin: auto;
 }
-.infoTitleContainer .titleRightContainer .titleRightTopContainer * {
+.infoTitleContainer .titleRightTopContainer * {
   margin: 0.25rem;
 }
-.infoTitleContainer .titleRightContainer .titleRightTopContainer .collection {
-  height: 30px;
+.infoTitleContainer .titleRightTopContainer .content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 90%;
+}
+.infoTitleContainer .titleRightTopContainer .content .collection {
+  height: 25px;
   width: 75px;
   font-size: 1rem;
   background-color: white;
@@ -1021,16 +963,16 @@
   margin-bottom: auto;
 }
 @media (min-width: 480px) {
-  .infoTitleContainer .titleRightContainer .titleRightTopContainer .collection {
+  .infoTitleContainer .titleRightTopContainer .content .collection {
     align-self: flex-start;
   }
 }
 @media (min-width: 720px) {
-  .infoTitleContainer .titleRightContainer .titleRightTopContainer .collection {
+  .infoTitleContainer .titleRightTopContainer .content .collection {
     align-self: flex-end;
   }
 }
-.infoTitleContainer .titleRightContainer .titleRightBottomContainer {
+.infoTitleContainer .titleRightBottomContainer {
   margin: auto;
   background: #cdcdcd;
   width: 80%;
@@ -1039,97 +981,79 @@
   flex-direction: row;
   align-items: center;
 }
-.infoTitleContainer .titleRightContainer .titleRightBottomContainer .leftBoard {
+.infoTitleContainer .titleRightBottomContainer .leftBoard {
   width: 25%;
   height: 100%;
   padding: 0.375rem;
   display: grid;
 }
 @media (min-width: 480px) {
-  .infoTitleContainer .titleRightContainer .titleRightBottomContainer .leftBoard {
+  .infoTitleContainer .titleRightBottomContainer .leftBoard {
     display: grid;
     width: 100%;
     padding-right: 0.75rem;
   }
-  .infoTitleContainer .titleRightContainer .titleRightBottomContainer .leftBoard * {
+  .infoTitleContainer .titleRightBottomContainer .leftBoard * {
     margin-right: 0.375rem;
   }
 }
 @media (min-width: 720px) {
-  .infoTitleContainer .titleRightContainer .titleRightBottomContainer .leftBoard {
+  .infoTitleContainer .titleRightBottomContainer .leftBoard {
     display: none;
   }
 }
 @media (min-width: 960px) {
-  .infoTitleContainer .titleRightContainer .titleRightBottomContainer .leftBoard {
+  .infoTitleContainer .titleRightBottomContainer .leftBoard {
     display: grid;
     width: 25%;
     margin-right: 0;
     padding-right: 0;
   }
 }
-.infoTitleContainer .titleRightContainer .titleRightBottomContainer .leftBoard .pictureType1 {
+.infoTitleContainer .titleRightBottomContainer .leftBoard .pictureType1 {
   background-color: white;
   margin: 0.375rem;
   margin-right: 0;
 }
-.infoTitleContainer .titleRightContainer .titleRightBottomContainer .rightBoard {
+.infoTitleContainer .titleRightBottomContainer .rightBoard {
   height: 100%;
   padding: 0.375rem;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 2fr 1fr;
 }
-.infoTitleContainer .titleRightContainer .titleRightBottomContainer .rightBoard * {
+.infoTitleContainer .titleRightBottomContainer .rightBoard * {
   margin: 0.375rem;
 }
 @media (min-width: 480px) {
-  .infoTitleContainer .titleRightContainer .titleRightBottomContainer .rightBoard {
+  .infoTitleContainer .titleRightBottomContainer .rightBoard {
     display: none;
   }
 }
 @media (min-width: 720px) {
-  .infoTitleContainer .titleRightContainer .titleRightBottomContainer .rightBoard {
+  .infoTitleContainer .titleRightBottomContainer .rightBoard {
     display: grid;
     width: 100%;
   }
 }
 @media (min-width: 960px) {
-  .infoTitleContainer .titleRightContainer .titleRightBottomContainer .rightBoard {
+  .infoTitleContainer .titleRightBottomContainer .rightBoard {
     width: 75%;
   }
 }
-.infoTitleContainer .titleRightContainer .titleRightBottomContainer .rightBoard .rightTopBoard {
+.infoTitleContainer .titleRightBottomContainer .rightBoard .rightTopBoard {
   background-color: white;
   grid-column: 1/-1;
 }
-.infoTitleContainer .titleRightContainer .titleRightBottomContainer .rightBoard .rightBottomBoard {
+.infoTitleContainer .titleRightBottomContainer .rightBoard .rightBottomBoard {
   background-color: white;
 }
 
 .hotelinfoSectionContainer {
-  display: flex;
-  flex-direction: column;
-  margin: auto;
-}
-@media (min-width: 480px) {
-  .hotelinfoSectionContainer {
-    width: 100%;
-  }
-}
-@media (min-width: 720px) {
-  .hotelinfoSectionContainer {
-    width: 85%;
-  }
-}
-@media (min-width: 960px) {
-  .hotelinfoSectionContainer {
-    width: 80%;
-  }
-}
-@media (min-width: 1200px) {
-  .hotelinfoSectionContainer {
-    width: 70%;
-  }
+  position: absolute;
+  top: 15%;
+  right: 0;
+  width: 100%;
+  height: 85%;
 }
 .hotelinfoSectionContainer .hotelInfoEvaluate, .hotelinfoSectionContainer .hotelInfoInformation,
 .hotelinfoSectionContainer .hotelInfoAttraction, .hotelinfoSectionContainer .hotelInfoTransportation {
@@ -1139,6 +1063,79 @@
 .hotelinfoSectionContainer .hotelInfoAttraction, .hotelinfoSectionContainer .hotelInfoTransportation {
   margin-top: 5%;
   margin-bottom: 5%;
+}
+.hotelinfoSectionContainer .titleLeftContainer {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #858585;
+  color: white;
+  height: 100%;
+  font-family: Microsoft JhengHei;
+  font-size: 1.2rem;
+  padding: 0.75rem;
+  padding-top: 1.5rem;
+  width: 20%;
+}
+@media (min-width: 480px) {
+  .hotelinfoSectionContainer .titleLeftContainer {
+    width: 25%;
+  }
+}
+@media (min-width: 720px) {
+  .hotelinfoSectionContainer .titleLeftContainer {
+    width: 23%;
+  }
+}
+@media (min-width: 960px) {
+  .hotelinfoSectionContainer .titleLeftContainer {
+    width: 23%;
+  }
+}
+@media (min-width: 1200px) {
+  .hotelinfoSectionContainer .titleLeftContainer {
+    width: 18%;
+  }
+}
+@media (min-width: 480px) {
+  .hotelinfoSectionContainer .titleLeftContainer .searchSearchformContainer, .hotelinfoSectionContainer .titleLeftContainer .btnfilter {
+    width: 80%;
+  }
+}
+@media (min-width: 960px) {
+  .hotelinfoSectionContainer .titleLeftContainer .searchSearchformContainer, .hotelinfoSectionContainer .titleLeftContainer .btnfilter {
+    width: 70%;
+  }
+}
+@media (min-width: 1200px) {
+  .hotelinfoSectionContainer .titleLeftContainer .searchSearchformContainer, .hotelinfoSectionContainer .titleLeftContainer .btnfilter {
+    width: 65%;
+  }
+}
+.hotelinfoSectionContainer .titleLeftContainer .btnfilter {
+  border-radius: 5px;
+  cursor: pointer;
+  height: 2.4rem;
+  padding: 10px;
+  margin: 0.75rem;
+  margin-top: 20%;
+  font-weight: bolder;
+  font-size: 1rem;
+}
+.hotelinfoSectionContainer .titleLeftContainer .logo {
+  margin: auto;
+  margin-top: 5rem;
+  margin-bottom: 2rem;
+  height: 100px;
+  width: 100px;
+}
+.hotelinfoSectionContainer .main {
+  position: absolute;
+  width: 80%;
+  height: 100%;
+  right: 0%;
+  padding: 2.5%;
 }
 
 .roominfo {
@@ -1801,15 +1798,16 @@
 .userHotelInfoContainer {
   position: absolute;
   top: 15%;
-  right: 0%;
   width: 100%;
   height: 85%;
   display: flex;
 }
 .userHotelInfoContainer .main {
-  padding: 2.5%;
+  position: absolute;
+  width: 85%;
   height: 100%;
-  width: 100%;
+  right: 0%;
+  padding: 2.5%;
 }
 .userHotelInfoContainer .main .content {
   margin-bottom: 2%;
@@ -1998,9 +1996,11 @@
   display: flex;
 }
 .userHotelRoomContainer .leftContainer {
+  position: absolute;
   height: 100%;
-  width: 100%;
+  width: 85%;
   padding: 2.5%;
+  right: 0;
   padding-top: 1%;
   padding-bottom: 1%;
   display: flex;
@@ -2131,93 +2131,6 @@
   display: flex;
   justify-content: flex-end;
   height: 10%;
-}
-
-.userHotelInfoContainer {
-  position: absolute;
-  top: 15%;
-  right: 0%;
-  width: 100%;
-  height: 85%;
-  display: flex;
-}
-.userHotelInfoContainer .main {
-  position: absolute;
-  width: 80%;
-  height: 100%;
-  right: 0%;
-  padding: 2.5%;
-}
-.userHotelInfoContainer .main .content {
-  margin-bottom: 2%;
-  width: 100%;
-  display: flex;
-}
-.userHotelInfoContainer .main .content .title {
-  font-size: 2.5rem;
-  margin-bottom: 1%;
-}
-.userHotelInfoContainer .main .content .contentname {
-  margin-right: 2%;
-  font-size: 1.5rem;
-  font-weight: bold;
-}
-.userHotelInfoContainer .main .content .short_input {
-  border-radius: 7px;
-  width: 30%;
-}
-.userHotelInfoContainer .main .content .long_input {
-  border-radius: 7px;
-  width: 40%;
-}
-.userHotelInfoContainer .main .pic_content {
-  margin-bottom: 2%;
-  height: 55%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-.userHotelInfoContainer .main .pic_content .contentname {
-  font-size: 1.5rem;
-  font-weight: bold;
-}
-.userHotelInfoContainer .main .pic_content .image {
-  margin-top: 2%;
-  margin-bottom: 1%;
-  height: 100%;
-  width: 100%;
-  background-color: white;
-  border-radius: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.userHotelInfoContainer .main .pic_content .image i {
-  font-size: 1.5rem;
-}
-.userHotelInfoContainer .main .pic_content .image i:hover {
-  font-size: 2rem;
-  transition: linear 0.1s;
-}
-.userHotelInfoContainer .main .btn_content {
-  height: 10%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: end;
-}
-.userHotelInfoContainer .main .btn_content .btn {
-  margin-right: 1%;
-  margin-left: 1%;
-  height: 40%;
-  width: 5%;
-  border-radius: 5px;
-  background-color: white;
-}
-.userHotelInfoContainer .main .btn_content .btn:hover {
-  background-color: black;
-  color: white;
-  transition: linear 0.2s;
 }
 
 .userHotelNoticeContainer {
