--- a/styles/components/_hotelinfo-title.scss
+++ b/styles/components/_hotelinfo-title.scss
@@ -1,23 +1,23 @@
 .infoTitleContainer {
+  margin-top: 3%;
   display: flex;
-  height: 100%;
+  height: 97%;
   width: 100%;
   justify-content: space-between;
-  margin-bottom: 5%;
-  flex-direction: column;
+  margin-bottom: 2%;
+  flex-direction: row;
   align-items: start;
   padding: 1.5%;
 
   .title{
     font-size: 3rem;
   }
-  .titleRightTopContainer{
-    width: 100%;
-    height: 30%;
+  .titleTopContainer{
+    width: 30%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: start;
-    margin: auto;
 
     * {
       margin: $base-margin/4;
@@ -26,89 +26,37 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      width: 90%;
-      .collection{
-        height: 25px;
-        width: 75px;
-        font-size: $base-font-size;
-        background-color: white;
-        border-radius: 5px;
-        margin-top: auto;
-        margin-bottom: auto;
-        @include sm {
-          align-self: flex-start;
-        }
-        @include md {
-          align-self: flex-end;
-        }
-      }
+      width: 100%;
     }
   }
 
-  .titleRightBottomContainer{
-    margin: auto;
+  .titleBottomContainer{
     background: #cdcdcd;
-    width: 80%;
-    height: 80%;
+    width: 70%;
+    height: 90%;
     display: flex;
     flex-direction: row;
     align-items: center;
-
-    .leftBoard{
-      width: 25%;
+    margin-top: 1%;
+    padding-top:2%;
+    padding-left:2% ;
+    padding-bottom: 2% ;
+    .img{
+      background-color : white;
       height: 100%;
-      padding: $base-padding/2;
-      display: grid;
-
-      @include sm {
-        display: grid;
-        width: 100%;
-        padding-right: $base-padding;
-        * {
-          margin-right: $base-padding/2;
-        }
-      }
-      @include md {
-        display: none;
-      }
-      @include lg {
-        display: grid;
-        width: 25%;
-        margin-right: 0;
-        padding-right: 0;
-      }
-      .pictureType1{
-        background-color: white;
-        margin: $base-padding/2;
-        margin-right: 0;
-      }
+      width: 90%;
     }
-
-    .rightBoard{
-      height: 100%;
-      padding: $base-padding/2;  
-      * {
-        margin: $base-padding/2;
-      }
-      @include sm {
-        display: none;
-      }
-      @include md {
-        display: grid;
-        width: 100%;
-      }
-      @include lg {
-        width: 75%;
-      }
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 2fr 1fr;
-
-      .rightTopBoard{
-        background-color: white;
-        grid-column: 1/-1; 
-      }
-      .rightBottomBoard{
-        background-color: white;  
+    .icon{
+      height:100%;
+      width:10%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      i{
+        font-size: 1.5rem;
+        &:hover{
+          font-size: 2rem;
+        }
       }
     }
   }
