--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -846,45 +846,48 @@
   flex-direction: column;
   justify-content: space-between;
   margin-top: 2rem;
-  padding: 2.25rem;
+  padding: 1.5rem;
   background: white;
   border-radius: 20px;
-  height: 600px;
-  width: 95%;
+  height: 300px;
+  width: 60%;
 }
 .hotelInfoInformation .searchcontainerALL {
   width: 100%;
   display: flex;
   flex-direction: row;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
 }
 .hotelInfoInformation .searchcontainerALL .searchcontainerTitle {
-  width: 30%;
+  width: 40%;
   height: 100%;
 }
 .hotelInfoInformation .searchcontainerALL .searchcontainerName {
-  width: 70%;
+  width: 60%;
   height: 100%;
 }
 .hotelInfoInformation .searchcontainerALL .name {
   font-size: 1rem;
   position: relative;
+  font-weight: bold;
 }
 
 .hotelInfoTransportation {
-  width: 20%;
+  width: 100%;
 }
 .hotelInfoTransportation .title {
-  margin-top: 10%;
-  margin-bottom: 15%;
   font-size: 2rem;
   font-weight: bolder;
   position: relative;
 }
 .hotelInfoTransportation .name {
+  margin-top: 2rem;
+  width: 60%;
   font-size: 1rem;
   position: relative;
+  background-color: white;
+  padding: 1.5rem;
+  font-weight: bold;
+  border-radius: 20px;
 }
 
 .hotelInfoBookContainer .right_container {
@@ -924,128 +927,64 @@
 }
 
 .infoTitleContainer {
+  margin-top: 3%;
   display: flex;
-  height: 100%;
+  height: 97%;
   width: 100%;
   justify-content: space-between;
-  margin-bottom: 5%;
-  flex-direction: column;
+  margin-bottom: 2%;
+  flex-direction: row;
   align-items: start;
   padding: 1.5%;
 }
 .infoTitleContainer .title {
   font-size: 3rem;
 }
-.infoTitleContainer .titleRightTopContainer {
-  width: 100%;
-  height: 30%;
+.infoTitleContainer .titleTopContainer {
+  width: 30%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: start;
-  margin: auto;
 }
-.infoTitleContainer .titleRightTopContainer * {
+.infoTitleContainer .titleTopContainer * {
   margin: 0.25rem;
 }
-.infoTitleContainer .titleRightTopContainer .content {
+.infoTitleContainer .titleTopContainer .content {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 90%;
+  width: 100%;
 }
-.infoTitleContainer .titleRightTopContainer .content .collection {
-  height: 25px;
-  width: 75px;
-  font-size: 1rem;
-  background-color: white;
-  border-radius: 5px;
-  margin-top: auto;
-  margin-bottom: auto;
-}
-@media (min-width: 480px) {
-  .infoTitleContainer .titleRightTopContainer .content .collection {
-    align-self: flex-start;
-  }
-}
-@media (min-width: 720px) {
-  .infoTitleContainer .titleRightTopContainer .content .collection {
-    align-self: flex-end;
-  }
-}
-.infoTitleContainer .titleRightBottomContainer {
-  margin: auto;
+.infoTitleContainer .titleBottomContainer {
   background: #cdcdcd;
-  width: 80%;
-  height: 80%;
+  width: 70%;
+  height: 90%;
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin-top: 1%;
+  padding-top: 2%;
+  padding-left: 2%;
+  padding-bottom: 2%;
 }
-.infoTitleContainer .titleRightBottomContainer .leftBoard {
-  width: 25%;
+.infoTitleContainer .titleBottomContainer .img {
+  background-color: white;
   height: 100%;
-  padding: 0.375rem;
-  display: grid;
+  width: 90%;
 }
-@media (min-width: 480px) {
-  .infoTitleContainer .titleRightBottomContainer .leftBoard {
-    display: grid;
-    width: 100%;
-    padding-right: 0.75rem;
-  }
-  .infoTitleContainer .titleRightBottomContainer .leftBoard * {
-    margin-right: 0.375rem;
-  }
-}
-@media (min-width: 720px) {
-  .infoTitleContainer .titleRightBottomContainer .leftBoard {
-    display: none;
-  }
-}
-@media (min-width: 960px) {
-  .infoTitleContainer .titleRightBottomContainer .leftBoard {
-    display: grid;
-    width: 25%;
-    margin-right: 0;
-    padding-right: 0;
-  }
-}
-.infoTitleContainer .titleRightBottomContainer .leftBoard .pictureType1 {
-  background-color: white;
-  margin: 0.375rem;
-  margin-right: 0;
-}
-.infoTitleContainer .titleRightBottomContainer .rightBoard {
+.infoTitleContainer .titleBottomContainer .icon {
   height: 100%;
-  padding: 0.375rem;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 2fr 1fr;
+  width: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.infoTitleContainer .titleRightBottomContainer .rightBoard * {
-  margin: 0.375rem;
+.infoTitleContainer .titleBottomContainer .icon i {
+  font-size: 1.5rem;
 }
-@media (min-width: 480px) {
-  .infoTitleContainer .titleRightBottomContainer .rightBoard {
-    display: none;
-  }
-}
-@media (min-width: 720px) {
-  .infoTitleContainer .titleRightBottomContainer .rightBoard {
-    display: grid;
-    width: 100%;
-  }
-}
-@media (min-width: 960px) {
-  .infoTitleContainer .titleRightBottomContainer .rightBoard {
-    width: 75%;
-  }
-}
-.infoTitleContainer .titleRightBottomContainer .rightBoard .rightTopBoard {
-  background-color: white;
-  grid-column: 1/-1;
-}
-.infoTitleContainer .titleRightBottomContainer .rightBoard .rightBottomBoard {
-  background-color: white;
+.infoTitleContainer .titleBottomContainer .icon i:hover {
+  font-size: 2rem;
 }
 
 .hotelinfoSectionContainer {
@@ -1057,12 +996,11 @@
 }
 .hotelinfoSectionContainer .hotelInfoEvaluate, .hotelinfoSectionContainer .hotelInfoInformation,
 .hotelinfoSectionContainer .hotelInfoAttraction, .hotelinfoSectionContainer .hotelInfoTransportation {
-  margin: 1rem;
+  padding: 1.5%;
 }
 .hotelinfoSectionContainer .roominfo, .hotelinfoSectionContainer .hotelInfoEvaluate, .hotelinfoSectionContainer .hotelInfoInformation,
 .hotelinfoSectionContainer .hotelInfoAttraction, .hotelinfoSectionContainer .hotelInfoTransportation {
-  margin-top: 5%;
-  margin-bottom: 5%;
+  margin-top: 2%;
 }
 .hotelinfoSectionContainer .titleLeftContainer {
   position: fixed;
@@ -1125,8 +1063,8 @@
 }
 .hotelinfoSectionContainer .titleLeftContainer .logo {
   margin: auto;
-  margin-top: 5rem;
-  margin-bottom: 2rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   height: 100px;
   width: 100px;
 }
@@ -1135,7 +1073,8 @@
   width: 80%;
   height: 100%;
   right: 0%;
-  padding: 2.5%;
+  padding-left: 2%;
+  padding-right: 2%;
 }
 
 .roominfo {
