--- a/styles/components/_userHotelFeature-section.scss
+++ b/styles/components/_userHotelFeature-section.scss
@@ -30,8 +30,10 @@
     display: flex;
 
     .leftContainer {
+        position: absolute;
+        width:80%;
         height: 100%;
-        width: 100%;
+        right: 0%;
         padding: 2.5%;
         padding-top: 1%;
         padding-bottom: 1%;
@@ -86,9 +88,12 @@
         .added {
             @include button;
             margin-bottom: $base-margin;
+
         }
         .hotelbutton, .btn {
             @include button;
+            margin-top: $base-margin;
+            margin-bottom: $base-margin;
         }
         .btn_content {
             margin-top: auto;
