--- a/styles/layout/home.module.scss
+++ b/styles/layout/home.module.scss
@@ -38,6 +38,7 @@
 
 @import '../components/userMulti-menu';
 @import '../components/userPersonalInfo-section';
+@import '../components/_userHotel-multi';
 @import '../components/userHotel-info';
 @import '../components/userHotelFeature-section';
 @import '../components/userHotelRoom-section';
