--- a/styles/components/_userHotel-info.scss
+++ b/styles/components/_userHotel-info.scss
@@ -1,47 +1,20 @@
 .userHotelInfoContainer {
-    position: absolute;
-    top: 15%;
-    width: 100%;
-    height: 85%;
-    display: flex;
+    @include pageContainer;
+
     .main{
-        position: absolute;
-        width:85%;
-        height: 100%;
-        right: 0%;
-        padding: 2.5%;
-        .content{
-            margin-bottom: 2%;
-            width: 100%;
-            display: flex;
-            .title{
-                font-size: 2.5rem;
-                margin-bottom: 1%;
-            }
-            .contentname{
-                margin-right: 2%;
-                font-size: 1.5rem;
-                font-weight: bold;
-            }
-            .short_input{
-                border-radius: 7px;  
-                width: 30%;  
-            }
-            .long_input{
-                border-radius: 7px;
-                width: 40%;
-            }
+        @include template;
+        .short_input{
+            @include input(30%);
+        }
+        .long_input{
+            @include input(40%);
         }
         .pic_content{
             margin-bottom: 2%;
-            height: 55%;
+            height: 40vh;
             width: 100%;
             display: flex;
             flex-direction: column;
-            .contentname{
-                font-size: 1.5rem;
-                font-weight: bold;
-            }
             .image{
                 margin-top: 2%;
                 margin-bottom: 1%;
@@ -68,20 +41,7 @@
             display: flex;
             align-items: center;
             justify-content: end;
-            .btn{
-                margin-right: 1%;
-                margin-left: 1%;
-                height: 40%;
-                width: 5%;
-                border-radius: 5px;
-                background-color: white;
-                &:hover{
-                    background-color: black;
-                    color: white;
-                    transition: linear 0.2s;
-                }
-                
-            }
+            
         }
     }
 }
