--- a/styles/components/_userHotelFeature-section.scss
+++ b/styles/components/_userHotelFeature-section.scss
@@ -1,100 +1,20 @@
-@mixin button {
-    padding: 6px;
-    border-radius: $base-border-radius;
-    // border: 1px solid $decorate-color;
-    margin-top: 0;
-    margin-bottom: 0;
-    max-height: 40px;
-    min-width: 80px;
-    &:hover {
-        background-color: white;
-        color: black;
-        border: 1px solid $decorate-color;
-    }
-}
-@mixin textarea {
-    padding: $base-padding;
-    resize: none;
-    line-height: 1.5;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    box-shadow: 1px 1px 1px #999;
-}
-
 .userHotelFeatureContainer {
-    position: absolute;
-    top: 15%;
-    right: 0%;
-    width: 100%;
-    height: 85%;
-    display: flex;
+    @include pageContainer;
 
-    .leftContainer {
-        position: absolute;
-        width:80%;
-        height: 100%;
-        right: 0%;
-        padding: 2.5%;
-        padding-top: 1%;
-        padding-bottom: 1%;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        
-        .title {
+    .main {
+        @include template;
+        .textarea {
+            height: 16em;
             width: 100%;
+            @include textarea;
+        }
+        .label_content {
             display: flex;
-            justify-content: flex-end;
-            align-items: center;
-            h1 {
-                font-size: $font-size-xxl;
-                margin: 0;
-                margin-left: $base-margin;
-                margin-right: auto;
-            }       
+            margin-bottom: 2%;
+            @include styled_botton;
             
-
-        }
-        * {
-            margin: $base-margin;
-            font-size: $base-font-size;
-            p {
-                font-size: $font-size-md;
-            } 
-        }
-        form {
-            
-            .labelcontainer {
-                display: flex;
-                margin: 0;
-                margin-bottom: $base-margin;
-            }
-            .textarea {
-                height: 10em;
-                width: 100%;
-                @include textarea;
-            }
-            .add {
-                @include button;
-                margin-bottom: $base-margin;
-                background-color: white;
-                border: 2px solid #999;
-                &:hover {
-                    background-color: #999;
-                    color: white;
-                }
-            }
-        } 
-        .added {
-            @include button;
-            margin-bottom: $base-margin;
-
-        }
-        .hotelbutton, .btn {
-            @include button;
-            margin-top: $base-margin;
-            margin-bottom: $base-margin;
-        }
+        }   
+        
         .btn_content {
             margin-top: auto;
             display: flex;
@@ -102,6 +22,4 @@
             height: 10%;
         }
     }
-
-    
 }
