--- a/styles/components/_userHotelRoom-section.scss
+++ b/styles/components/_userHotelRoom-section.scss
@@ -1,55 +1,21 @@
 .userHotelRoomContainer {
-    position: absolute;
-    top: 15%;
-    right: 0%;
-    width: 100%;
-    height: 85%;
-    display: flex;
+    @include pageContainer;
 
-    .leftContainer {
-        position: absolute;
-        height: 100%;
-        width: 85%;
-        padding: 2.5%;
-        right: 0;
-        padding-top: 1%;
-        padding-bottom: 1%;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
+    .main{
+        @include template;
         
-        .title {
-            width: 100%;
-            display: flex;
-            justify-content: flex-end;
-            align-items: center;
-            h1 {
-                font-size: $font-size-xxl;
-                margin: 0;
-                margin-left: $base-margin;
-                margin-right: auto;
-            }       
-            
-
-        }
-
-        * {
-            margin: $base-margin;
-            font-size: $base-font-size;
-            p {
-                font-size: $font-size-md;
-            } 
-        }
         .roomform {
+
             padding: 3%;
             background-color: white;
             display: grid;
             grid-template-columns: 1fr 5fr;
             align-items: center;
             border-radius: $base-border-radius;
-            
-            p, .input, input, .textarea{
-                margin-left: 0;
+            margin-bottom: 3%;
+
+            * {
+                margin-bottom: $base-margin * 1.5;
             }
             
             p{
@@ -67,11 +33,7 @@
                 }
             }
             input {
-                border: 2px solid #999;
-                border-radius: 5px;
-                padding: 5px;
-                width: 30%;
-                min-width: 100px;
+                @include input(30%);
             }
 
             .labelcontainer {
@@ -79,6 +41,7 @@
                 display: flex;
                 margin: 0;
                 margin-bottom: $base-margin;
+                @include styled_botton;
             }
 
             .textarea {
@@ -87,34 +50,16 @@
                 @include textarea;
                 grid-column: 1/-1;
             }
-            .add {
-                @include button;
-                background-color: white;
-                border: 2px solid #999;
-                &:hover {
-                    background-color: #999;
-                    color: white;
-                }
-                i {
-                    margin-left: $base-margin;
-                }
-            }
+            
         } 
-        .added {
-            @include button;
-            margin-bottom: $base-margin;
-        }
-        .hotelbutton, .btn {
-            @include button;
-            margin-top: $base-margin;
-            margin-bottom: $base-margin;
-        }
+
         .btn_content {
             margin-top: auto;
             display: flex;
             justify-content: flex-end;
             height: 10%;
         } 
+
         .newroom {
             * {
                 font-size: $font-size-xl;
