--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -1742,43 +1742,75 @@
   display: flex;
 }
 .userHotelInfoContainer .main {
-  padding: 2.5%;
-  height: 100%;
+  position: absolute;
+  width: 85%;
   right: 0%;
   padding: 2.5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.userHotelInfoContainer .main p, .userHotelInfoContainer .main .contentname {
+  font-size: 1.3rem;
+  font-weight: bold;
+  margin-right: 3%;
+}
+.userHotelInfoContainer .main button {
+  font-size: 1rem;
 }
 .userHotelInfoContainer .main .content {
-  margin-bottom: 2%;
+  margin-bottom: 2rem;
   width: 100%;
   display: flex;
 }
-.userHotelInfoContainer .main .content .title {
-  font-size: 2.5rem;
-  margin-bottom: 1%;
+.userHotelInfoContainer .main .content h1 {
+  font-size: 3rem;
+  margin: 0;
 }
-.userHotelInfoContainer .main .content .contentname {
-  margin-right: 2%;
-  font-size: 1.5rem;
-  font-weight: bold;
+.userHotelInfoContainer .main .content .hotelbutton {
+  margin-left: auto;
 }
-.userHotelInfoContainer .main .content .short_input {
-  border-radius: 7px;
+.userHotelInfoContainer .main .spacing {
+  margin-bottom: 1.5rem;
+}
+.userHotelInfoContainer .main .hotelbutton, .userHotelInfoContainer .main .btn {
+  padding: 6px;
+  border-radius: 20px;
+  margin: 1rem;
+  max-height: 40px;
+  min-width: 80px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.userHotelInfoContainer .main .hotelbutton:hover, .userHotelInfoContainer .main .btn:hover {
+  background-color: black;
+  color: white;
+  transition: linear 0.2s;
+}
+.userHotelInfoContainer .main .short_input {
+  border: 2px solid #999;
+  border-radius: 5px;
+  padding: 5px;
   width: 30%;
+  min-width: 100px;
+  line-height: 1.5;
+  margin-right: 0.75rem;
 }
-.userHotelInfoContainer .main .content .long_input {
-  border-radius: 7px;
+.userHotelInfoContainer .main .long_input {
+  border: 2px solid #999;
+  border-radius: 5px;
+  padding: 5px;
   width: 40%;
+  min-width: 100px;
+  line-height: 1.5;
+  margin-right: 0.75rem;
 }
 .userHotelInfoContainer .main .pic_content {
   margin-bottom: 2%;
-  height: 55%;
+  height: 40vh;
   width: 100%;
   display: flex;
   flex-direction: column;
-}
-.userHotelInfoContainer .main .pic_content .contentname {
-  font-size: 1.5rem;
-  font-weight: bold;
 }
 .userHotelInfoContainer .main .pic_content .image {
   margin-top: 2%;
@@ -1805,66 +1837,62 @@
   align-items: center;
   justify-content: end;
 }
-.userHotelInfoContainer .main .btn_content .btn {
-  margin-right: 1%;
-  margin-left: 1%;
-  height: 40%;
-  width: 5%;
-  border-radius: 5px;
-  background-color: white;
-}
-.userHotelInfoContainer .main .btn_content .btn:hover {
-  background-color: black;
-  color: white;
-  transition: linear 0.2s;
-}
 
 .userHotelFeatureContainer {
   position: absolute;
   top: 15%;
-  right: 0%;
   width: 100%;
   height: 85%;
   display: flex;
 }
-.userHotelFeatureContainer .leftContainer {
+.userHotelFeatureContainer .main {
   position: absolute;
-  width: 80%;
-  height: 100%;
+  width: 85%;
   right: 0%;
   padding: 2.5%;
-  padding-top: 1%;
-  padding-bottom: 1%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
 }
-.userHotelFeatureContainer .leftContainer .title {
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+.userHotelFeatureContainer .main p, .userHotelFeatureContainer .main .contentname {
+  font-size: 1.3rem;
+  font-weight: bold;
+  margin-right: 3%;
 }
-.userHotelFeatureContainer .leftContainer .title h1 {
-  font-size: 3rem;
-  margin: 0;
-  margin-left: 1rem;
-  margin-right: auto;
-}
-.userHotelFeatureContainer .leftContainer * {
-  margin: 1rem;
+.userHotelFeatureContainer .main button {
   font-size: 1rem;
 }
-.userHotelFeatureContainer .leftContainer * p {
-  font-size: 1.2rem;
-}
-.userHotelFeatureContainer .leftContainer form .labelcontainer {
+.userHotelFeatureContainer .main .content {
+  margin-bottom: 2rem;
+  width: 100%;
   display: flex;
+}
+.userHotelFeatureContainer .main .content h1 {
+  font-size: 3rem;
   margin: 0;
+}
+.userHotelFeatureContainer .main .content .hotelbutton {
+  margin-left: auto;
+}
+.userHotelFeatureContainer .main .spacing {
+  margin-bottom: 1.5rem;
+}
+.userHotelFeatureContainer .main .hotelbutton, .userHotelFeatureContainer .main .btn {
+  padding: 6px;
+  border-radius: 20px;
+  margin: 1rem;
+  max-height: 40px;
+  min-width: 80px;
+  margin-top: 1rem;
   margin-bottom: 1rem;
 }
-.userHotelFeatureContainer .leftContainer form .textarea {
-  height: 10em;
+.userHotelFeatureContainer .main .hotelbutton:hover, .userHotelFeatureContainer .main .btn:hover {
+  background-color: black;
+  color: white;
+  transition: linear 0.2s;
+}
+.userHotelFeatureContainer .main .textarea {
+  height: 16em;
   width: 100%;
   padding: 0.75rem;
   resize: none;
@@ -1872,57 +1900,46 @@
   border-radius: 5px;
   border: 1px solid #ccc;
   box-shadow: 1px 1px 1px #999;
+  margin-bottom: 3%;
+  overflow: hidden;
 }
-.userHotelFeatureContainer .leftContainer form .add {
+.userHotelFeatureContainer .main .label_content {
+  display: flex;
+  margin-bottom: 2%;
+}
+.userHotelFeatureContainer .main .label_content .add {
   padding: 6px;
   border-radius: 20px;
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 1rem;
   max-height: 40px;
   min-width: 80px;
   margin-bottom: 1rem;
   background-color: white;
   border: 2px solid #999;
 }
-.userHotelFeatureContainer .leftContainer form .add:hover {
-  background-color: white;
-  color: black;
-  border: 1px solid #858585;
+.userHotelFeatureContainer .main .label_content .add:hover {
+  background-color: black;
+  color: white;
+  transition: linear 0.2s;
 }
-.userHotelFeatureContainer .leftContainer form .add:hover {
+.userHotelFeatureContainer .main .label_content .add:hover {
   background-color: #999;
   color: white;
 }
-.userHotelFeatureContainer .leftContainer .added {
+.userHotelFeatureContainer .main .label_content .added {
   padding: 6px;
   border-radius: 20px;
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 1rem;
   max-height: 40px;
   min-width: 80px;
   margin-bottom: 1rem;
 }
-.userHotelFeatureContainer .leftContainer .added:hover {
-  background-color: white;
-  color: black;
-  border: 1px solid #858585;
+.userHotelFeatureContainer .main .label_content .added:hover {
+  background-color: black;
+  color: white;
+  transition: linear 0.2s;
 }
-.userHotelFeatureContainer .leftContainer .hotelbutton, .userHotelFeatureContainer .leftContainer .btn {
-  padding: 6px;
-  border-radius: 20px;
-  margin-top: 0;
-  margin-bottom: 0;
-  max-height: 40px;
-  min-width: 80px;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-.userHotelFeatureContainer .leftContainer .hotelbutton:hover, .userHotelFeatureContainer .leftContainer .btn:hover {
-  background-color: white;
-  color: black;
-  border: 1px solid #858585;
-}
-.userHotelFeatureContainer .leftContainer .btn_content {
+.userHotelFeatureContainer .main .btn_content {
   margin-top: auto;
   display: flex;
   justify-content: flex-end;
@@ -1932,80 +1949,130 @@
 .userHotelRoomContainer {
   position: absolute;
   top: 15%;
-  right: 0%;
   width: 100%;
   height: 85%;
   display: flex;
 }
-.userHotelRoomContainer .leftContainer {
-  height: 100%;
-  width: 100%;
+.userHotelRoomContainer .main {
+  position: absolute;
+  width: 85%;
+  right: 0%;
   padding: 2.5%;
-  right: 0;
-  padding-top: 1%;
-  padding-bottom: 1%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
 }
-.userHotelRoomContainer .leftContainer .title {
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+.userHotelRoomContainer .main p, .userHotelRoomContainer .main .contentname {
+  font-size: 1.3rem;
+  font-weight: bold;
+  margin-right: 3%;
 }
-.userHotelRoomContainer .leftContainer .title h1 {
-  font-size: 3rem;
-  margin: 0;
-  margin-left: 1rem;
-  margin-right: auto;
-}
-.userHotelRoomContainer .leftContainer * {
-  margin: 1rem;
+.userHotelRoomContainer .main button {
   font-size: 1rem;
 }
-.userHotelRoomContainer .leftContainer * p {
-  font-size: 1.2rem;
+.userHotelRoomContainer .main .content {
+  margin-bottom: 2rem;
+  width: 100%;
+  display: flex;
 }
-.userHotelRoomContainer .leftContainer .roomform {
+.userHotelRoomContainer .main .content h1 {
+  font-size: 3rem;
+  margin: 0;
+}
+.userHotelRoomContainer .main .content .hotelbutton {
+  margin-left: auto;
+}
+.userHotelRoomContainer .main .spacing {
+  margin-bottom: 1.5rem;
+}
+.userHotelRoomContainer .main .hotelbutton, .userHotelRoomContainer .main .btn {
+  padding: 6px;
+  border-radius: 20px;
+  margin: 1rem;
+  max-height: 40px;
+  min-width: 80px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.userHotelRoomContainer .main .hotelbutton:hover, .userHotelRoomContainer .main .btn:hover {
+  background-color: black;
+  color: white;
+  transition: linear 0.2s;
+}
+.userHotelRoomContainer .main .roomform {
   padding: 3%;
   background-color: white;
   display: grid;
   grid-template-columns: 1fr 5fr;
   align-items: center;
   border-radius: 20px;
+  margin-bottom: 3%;
 }
-.userHotelRoomContainer .leftContainer .roomform p, .userHotelRoomContainer .leftContainer .roomform .input, .userHotelRoomContainer .leftContainer .roomform input, .userHotelRoomContainer .leftContainer .roomform .textarea {
-  margin-left: 0;
+.userHotelRoomContainer .main .roomform * {
+  margin-bottom: 1.5rem;
 }
-.userHotelRoomContainer .leftContainer .roomform p {
+.userHotelRoomContainer .main .roomform p {
   grid-column: 1/2;
 }
-.userHotelRoomContainer .leftContainer .roomform .input {
+.userHotelRoomContainer .main .roomform .input {
   grid-column: 2/3;
   display: flex;
   align-items: center;
 }
-.userHotelRoomContainer .leftContainer .roomform .input p {
+.userHotelRoomContainer .main .roomform .input p {
   margin-right: 3rem;
 }
-.userHotelRoomContainer .leftContainer .roomform .input input {
+.userHotelRoomContainer .main .roomform .input input {
   width: 10%;
 }
-.userHotelRoomContainer .leftContainer .roomform input {
+.userHotelRoomContainer .main .roomform input {
   border: 2px solid #999;
   border-radius: 5px;
   padding: 5px;
   width: 30%;
   min-width: 100px;
+  line-height: 1.5;
+  margin-right: 0.75rem;
 }
-.userHotelRoomContainer .leftContainer .roomform .labelcontainer {
+.userHotelRoomContainer .main .roomform .labelcontainer {
   grid-column: 1/-1;
   display: flex;
   margin: 0;
   margin-bottom: 1rem;
 }
-.userHotelRoomContainer .leftContainer .roomform .textarea {
+.userHotelRoomContainer .main .roomform .labelcontainer .add {
+  padding: 6px;
+  border-radius: 20px;
+  margin: 1rem;
+  max-height: 40px;
+  min-width: 80px;
+  margin-bottom: 1rem;
+  background-color: white;
+  border: 2px solid #999;
+}
+.userHotelRoomContainer .main .roomform .labelcontainer .add:hover {
+  background-color: black;
+  color: white;
+  transition: linear 0.2s;
+}
+.userHotelRoomContainer .main .roomform .labelcontainer .add:hover {
+  background-color: #999;
+  color: white;
+}
+.userHotelRoomContainer .main .roomform .labelcontainer .added {
+  padding: 6px;
+  border-radius: 20px;
+  margin: 1rem;
+  max-height: 40px;
+  min-width: 80px;
+  margin-bottom: 1rem;
+}
+.userHotelRoomContainer .main .roomform .labelcontainer .added:hover {
+  background-color: black;
+  color: white;
+  transition: linear 0.2s;
+}
+.userHotelRoomContainer .main .roomform .textarea {
   height: 10em;
   width: 100%;
   padding: 0.75rem;
@@ -2014,189 +2081,114 @@
   border-radius: 5px;
   border: 1px solid #ccc;
   box-shadow: 1px 1px 1px #999;
+  margin-bottom: 3%;
+  overflow: hidden;
   grid-column: 1/-1;
 }
-.userHotelRoomContainer .leftContainer .roomform .add {
-  padding: 6px;
-  border-radius: 20px;
-  margin-top: 0;
-  margin-bottom: 0;
-  max-height: 40px;
-  min-width: 80px;
-  background-color: white;
-  border: 2px solid #999;
-}
-.userHotelRoomContainer .leftContainer .roomform .add:hover {
-  background-color: white;
-  color: black;
-  border: 1px solid #858585;
-}
-.userHotelRoomContainer .leftContainer .roomform .add:hover {
-  background-color: #999;
-  color: white;
-}
-.userHotelRoomContainer .leftContainer .roomform .add i {
-  margin-left: 1rem;
-}
-.userHotelRoomContainer .leftContainer .added {
-  padding: 6px;
-  border-radius: 20px;
-  margin-top: 0;
-  margin-bottom: 0;
-  max-height: 40px;
-  min-width: 80px;
-  margin-bottom: 1rem;
-}
-.userHotelRoomContainer .leftContainer .added:hover {
-  background-color: white;
-  color: black;
-  border: 1px solid #858585;
-}
-.userHotelRoomContainer .leftContainer .hotelbutton, .userHotelRoomContainer .leftContainer .btn {
-  padding: 6px;
-  border-radius: 20px;
-  margin-top: 0;
-  margin-bottom: 0;
-  max-height: 40px;
-  min-width: 80px;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-.userHotelRoomContainer .leftContainer .hotelbutton:hover, .userHotelRoomContainer .leftContainer .btn:hover {
-  background-color: white;
-  color: black;
-  border: 1px solid #858585;
-}
-.userHotelRoomContainer .leftContainer .btn_content {
+.userHotelRoomContainer .main .btn_content {
   margin-top: auto;
   display: flex;
   justify-content: flex-end;
   height: 10%;
 }
-
-.userHotelInfoContainer {
-  position: absolute;
-  top: 15%;
-  right: 0%;
-  width: 100%;
-  height: 85%;
+.userHotelRoomContainer .main .newroom {
   display: flex;
-}
-.userHotelInfoContainer .main {
-  position: absolute;
-  width: 80%;
-  height: 100%;
-  right: 0%;
-  padding: 2.5%;
-}
-.userHotelInfoContainer .main .content {
-  margin-bottom: 2%;
-  width: 100%;
-  display: flex;
-}
-.userHotelInfoContainer .main .content .title {
-  font-size: 2.5rem;
-  margin-bottom: 1%;
-}
-.userHotelInfoContainer .main .content .contentname {
-  margin-right: 2%;
-  font-size: 1.5rem;
-  font-weight: bold;
-}
-.userHotelInfoContainer .main .content .short_input {
-  border-radius: 7px;
-  width: 30%;
-}
-.userHotelInfoContainer .main .content .long_input {
-  border-radius: 7px;
-  width: 40%;
-}
-.userHotelInfoContainer .main .pic_content {
-  margin-bottom: 2%;
-  height: 55%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-.userHotelInfoContainer .main .pic_content .contentname {
-  font-size: 1.5rem;
-  font-weight: bold;
-}
-.userHotelInfoContainer .main .pic_content .image {
-  margin-top: 2%;
-  margin-bottom: 1%;
-  height: 100%;
-  width: 100%;
-  background-color: white;
-  border-radius: 10px;
-  display: flex;
-  align-items: center;
   justify-content: center;
-}
-.userHotelInfoContainer .main .pic_content .image i {
-  font-size: 1.5rem;
-}
-.userHotelInfoContainer .main .pic_content .image i:hover {
-  font-size: 2rem;
-  transition: linear 0.1s;
-}
-.userHotelInfoContainer .main .btn_content {
-  height: 10%;
-  width: 100%;
-  display: flex;
   align-items: center;
-  justify-content: end;
-}
-.userHotelInfoContainer .main .btn_content .btn {
-  margin-right: 1%;
-  margin-left: 1%;
-  height: 40%;
-  width: 5%;
-  border-radius: 5px;
   background-color: white;
+  border-radius: 20px;
 }
-.userHotelInfoContainer .main .btn_content .btn:hover {
-  background-color: black;
-  color: white;
-  transition: linear 0.2s;
+.userHotelRoomContainer .main .newroom * {
+  font-size: 2rem;
+  font-weight: bold;
+}
+.userHotelRoomContainer .main .newroom i {
+  font-size: 3rem;
 }
 
 .userHotelNoticeContainer {
   position: absolute;
   top: 15%;
-  right: 0%;
   width: 100%;
   height: 85%;
   display: flex;
 }
 .userHotelNoticeContainer .main {
   position: absolute;
-  height: 100%;
   width: 85%;
   right: 0%;
   padding: 2.5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.userHotelNoticeContainer .main p, .userHotelNoticeContainer .main .contentname {
+  font-size: 1.3rem;
+  font-weight: bold;
+  margin-right: 3%;
+}
+.userHotelNoticeContainer .main button {
+  font-size: 1rem;
 }
 .userHotelNoticeContainer .main .content {
-  margin-bottom: 2%;
+  margin-bottom: 2rem;
   width: 100%;
   display: flex;
 }
-.userHotelNoticeContainer .main .content .title {
-  font-size: 2.5rem;
-  margin-bottom: 1%;
+.userHotelNoticeContainer .main .content h1 {
+  font-size: 3rem;
+  margin: 0;
 }
-.userHotelNoticeContainer .main .content .contentname {
-  margin-right: 2%;
-  font-size: 1.5rem;
-  font-weight: bold;
+.userHotelNoticeContainer .main .content .hotelbutton {
+  margin-left: auto;
 }
-.userHotelNoticeContainer .main .content .short_input {
-  border-radius: 7px;
+.userHotelNoticeContainer .main .spacing {
+  margin-bottom: 1.5rem;
+}
+.userHotelNoticeContainer .main .hotelbutton, .userHotelNoticeContainer .main .btn {
+  padding: 6px;
+  border-radius: 20px;
+  margin: 1rem;
+  max-height: 40px;
+  min-width: 80px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.userHotelNoticeContainer .main .hotelbutton:hover, .userHotelNoticeContainer .main .btn:hover {
+  background-color: black;
+  color: white;
+  transition: linear 0.2s;
+}
+.userHotelNoticeContainer .main .short_input {
+  border: 2px solid #999;
+  border-radius: 5px;
+  padding: 5px;
   width: 30%;
+  min-width: 100px;
+  line-height: 1.5;
+  margin-right: 0.75rem;
 }
-.userHotelNoticeContainer .main .content .long_input {
-  border-radius: 7px;
+.userHotelNoticeContainer .main .long_input {
+  border: 2px solid #999;
+  border-radius: 5px;
+  padding: 5px;
   width: 40%;
+  min-width: 100px;
+  line-height: 1.5;
+  margin-right: 0.75rem;
+}
+.userHotelNoticeContainer .main textarea {
+  padding: 0.75rem;
+  resize: none;
+  line-height: 1.5;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  box-shadow: 1px 1px 1px #999;
+  margin-bottom: 3%;
+  overflow: hidden;
+  height: 7rem;
+  width: 100%;
+  margin-bottom: 2%;
 }
 .userHotelNoticeContainer .main .pic_content {
   margin-bottom: 2%;
@@ -2262,13 +2254,11 @@
   justify-content: end;
 }
 .userHotelNoticeContainer .main .btn_content .btn {
-  margin-right: 1%;
-  margin-left: 1%;
-  margin-bottom: 1%;
-  height: 50%;
-  width: 5%;
-  border-radius: 5px;
-  background-color: white;
+  padding: 6px;
+  border-radius: 20px;
+  margin: 1rem;
+  max-height: 40px;
+  min-width: 80px;
 }
 .userHotelNoticeContainer .main .btn_content .btn:hover {
   background-color: black;
